about.css
.container-fluid {
  margin-top: -85px !important;
  margin-bottom: 0px;
  background-color: black !important;
  padding: 16px;
 }

 #navbar2 {
  background-color: black !important;
 }

 .navbar-brand {
  background-color: black !important;
  color: white !important;
 }
 .navbar-toggler {
  background-color: white !important;
 }

 .navbar-toggler-icon {
  background-color: white !important;
 }

 .nav-link {
  color: white !important;
  margin-top: 10px;
 }

 #navlogo {
  border-radius: 40%;
 }
  
    .about-us {
      text-align: center;
  
    }
  
    .about-p {
      font-size: large;
      text-align: center;
      margin-left: auto;
      margin-right: auto;
    }
  
    .about-img {
      width: 570px;
      height: 500px;
      margin-left: 15px;
    }
  
    .about-img-melvin {
      margin-left: 200px;
      width: 400px;
      height: 520px;
    }
  
    .about-img-greg {
     width: 450px;
     height: 500px;
      margin-left: 25px;
    }
  
    .about-img-jonovan {
      margin-left: 200px;
      width: 400px;
      height: 520px;
    }
    
    .meet-us {
      text-align: center;
      font-size: xx-large;
      padding: 10px;
      margin-bottom: 10px;
    }
  
    #justin-h2 {
      margin-left: 85px;
    }
  
    #melvin-h2 {
      margin-left: 30px;
    }
  
    #greg-h2 {
      margin-left: 80px;
    }
  
    #p-lead {
      margin-left: 85px;
    }
  
    #p-lead2 {
      margin-left: 30px;
      margin-right: 70px;
    }
  
    #carousel2 {
      height: 700px;
    }
  
    footer {
      text-align: center;
      background-color: #111;
      color: white;
      padding: 10px;
      position: fixed;
      left: 0;
      bottom: 0;
      width: 100%;
    }
  
    /* CREDIT TO BOOTSTRAP ON CSS */
    /* GLOBAL STYLES
  -------------------------------------------------- */
  /* Padding below the footer and lighter body text */
  
  body {
    padding-top: 4.1rem;
    padding-bottom: 3rem; 
    color: rgb(var(--bs-tertiary-color-rgb));
    
  } 
  
  
  /* CUSTOMIZE THE CAROUSEL
  -------------------------------------------------- */
  
  /* Carousel base class */
  .carousel {
    margin-bottom: 4rem;
  }
  /* Since positioning the image, we need to help out the caption */
  .carousel-caption {
    bottom: 3rem;
    z-index: 10;
  }
  
  /* Declare heights because of positioning of img element */
  .carousel-item {
    height: 40rem;
    background: white;
    color: white;
  }
  
  .container {
    position: absolute;
    top: 0;
    right: 0;
    padding: 30px;
  }
  
  
  /* MARKETING CONTENT
  -------------------------------------------------- */
  
  /* Center align the text within the three columns below the carousel */
  .marketing .col-lg-4 {
    margin-bottom: 1.5rem;
    text-align: center;
  }
  /* rtl:begin:ignore */
  .marketing .col-lg-4 p {
    margin-right: .75rem;
    margin-left: .75rem;
  }
  /* rtl:end:ignore */
  
  
  /* Featurettes
  ------------------------- */
  
  .featurette-divider {
    margin: 5rem 0; /* Space out the Bootstrap <hr> more */
  }
  
  /* Thin out the marketing headings */
  /* rtl:begin:remove */
  .featurette-heading {
    letter-spacing: -.05rem;
  }
  
  /* rtl:end:remove */
  
  /* RESPONSIVE CSS
  -------------------------------------------------- */
  
  @media (min-width: 40em) {
    /* Bump up size of carousel content */
    .carousel-caption p {
      margin-bottom: 1.25rem;
      font-size: 1.25rem;
      line-height: 1.4;
    }
  
    .featurette-heading {
      font-size: 50px;
    }
  }
  
  @media (min-width: 62em) {
    .featurette-heading {
      margin-top: 7rem;
    }
  }

  @media only screen and (max-width: 480px) {
    .d-block, .w-100 {
    width: 100%;
    height: 70%;
    }
    #carousel2 {
      height: 70%;
    }
    .carousel-item {
      height: 35rem;
    }
    .about-us {
      margin-top: -71px;
      text-align: center;
    }
    .meet-us {
      text-align: center;
    }
    .about-img-melvin, .about-img, .about-img-greg, .about-img-jonovan{
      margin-left: auto;
    }
    .lead{
      text-align: center;
    }
    .featurette-heading, .fw-normal, .lh-1 {
      margin-left: 45px !important;
    }
    #greg-h2, #justin-h2 {
      margin-left: 125px !important;
    }
  }
  

